mister cocktail back end

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -18,5 +18,5 @@
 
   <hr>
 
-  <%= link_to '<i class="fa fa-plus-circle"></i> Add a cocktail'.html_safe , new_cocktail_path, class: "btn btn-success" %>
+  <%= link_to '<i class="fa fa-plus-circle"></i> Add a cocktail'.html_safe , new_cocktail_path, class: "btn btn-primary" %>
 </div>
