--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,11 +1,20 @@
 <div class="container">
-  <div class="row">
-    <div class="col-6">
-      <h1><%= @cocktail.name %></h1>
+  <h1><%= @cocktail.name %></h1>
+  <% @cocktail.doses.each do |dose| %>
+    <div class="row">
+      <div class="col-6">
+        <ul>
+          <li><%= dose.description %> - <%= dose.ingredient.name %></li>
+        </ul>
+      </div>
+      <div class="col-6">
+        <%= link_to '<i class="fa fa-trash"></i>'.html_safe, dose_path(dose), method: :delete, class: "btn btn-danger"  %>
+      </div>
+  </div>
+  <% end %>
       <hr>
       <%= link_to '<i class="fas fa-glass-martini-alt"></i> Back to cocktails'.html_safe, cocktails_path, class: "btn btn-success" %>
       <%= link_to '<i class="fas fa-pen"></i> Edit'.html_safe, edit_cocktail_path, class: "btn btn-primary" %>
+      <%= link_to '<i class="fas fa-list-alt"></i> Add an ingredient'.html_safe, new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
 
-    </div>
-  </div>
 </div>
