cleaning app piscine a cocktail root route

--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -5,6 +5,7 @@
         <%= f.input :name %>
         <%= f.submit "Update cocktail", class: "btn btn-success"%>
       <% end %>
+      <%= link_to '<i class="fas fa-glass-martini-alt"></i> Back to cocktails'.html_safe, root_path, class: "btn btn-success" %>
     </div>
   </div>
 
