--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -13,7 +13,7 @@
   </div>
   <% end %>
       <hr>
-      <%= link_to '<i class="fas fa-glass-martini-alt"></i> Back to cocktails'.html_safe, cocktails_path, class: "btn btn-success" %>
+      <%= link_to '<i class="fas fa-glass-martini-alt"></i> Back to cocktails'.html_safe, root_path, class: "btn btn-success" %>
       <%= link_to '<i class="fas fa-pen"></i> Edit'.html_safe, edit_cocktail_path, class: "btn btn-primary" %>
       <%= link_to '<i class="fas fa-list-alt"></i> Add an ingredient'.html_safe, new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
 
