--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,22 +1,24 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('../../../assets/piscine-paris-pontoise.jpg');">
+  <div class="container">
+    <h1>La piscine à cocktails</h1>
+    <p>Ceux qui vont boire pour toi te saluent!</p>
+    <%= link_to '<i class="fa fa-plus-circle"></i> Add a cocktail'.html_safe , new_cocktail_path, class: "btn btn-primary" %>
+  </div>
+</div>
+
 <div class="container">
-<h1>Mister Cocktail - All cocktails</h1>
-  <% @cocktails.each do |cocktail| %>
-  <div class="row">
-    <div class="col-12 d-flex">
-        <div class="col-6">
-          <ul>
-            <li><%= link_to cocktail.name, cocktail_path(cocktail)  %>
-            </li>
-          </ul>
-        </div>
-        <div class="col-6">
+  <div class="row my-4">
+    <% @cocktails.each do |cocktail| %>
+    <div class="col-12 col-lg-4 d-flex justify-content-between p-4">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>" alt=<% cocktail.name %>>
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail)  %></h5>
+          <p class="card-text"></p>
           <%= link_to '<i class="fa fa-trash"></i> Remove cocktail'.html_safe, cocktail_path(cocktail), method: :delete, class: "btn btn-danger"  %>
         </div>
+      </div>
     </div>
+    <% end %>
   </div>
-  <% end %>
-
-  <hr>
-
-  <%= link_to '<i class="fa fa-plus-circle"></i> Add a cocktail'.html_safe , new_cocktail_path, class: "btn btn-primary" %>
 </div>
