--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,6 +3,8 @@
 <h1>New cocktail</h1>
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit "Create a cocktail", class: "btn btn-success" %>
 <% end %>
 </div>
