--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="page">
+      <div class="wrapper">
+        <%= yield %>
+      </div>
+
+      <%= render 'shared/footer' %>
+    </div>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag "application" %>
   </body>
